nix-compat-derive-tests/tests/ui/deserialize_bad_type.stderr
error[E0277]: the trait bound `BadType: NixDeserialize` is not satisfied
 --> tests/ui/deserialize_bad_type.rs:7:14
  |
7 |     version: BadType,
  |              ^^^^^^^ the trait `NixDeserialize` is not implemented for `BadType`
  |
  = help: the following other types implement trait `NixDeserialize`:
            BTreeMap<K, V>
            String
            Test
            Vec<T>
            bool
            bytes::bytes::Bytes
            i64
            u64
            usize
note: required by a bound in `try_read_value`
 --> $WORKSPACE/nix-compat/src/nix_daemon/de/mod.rs
  |
  |     fn try_read_value<V: NixDeserialize>(
  |                          ^^^^^^^^^^^^^^ required by this bound in `NixRead::try_read_value`
